2007-08-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/sysid.mak, gmake/app/gcc.mak, gmake/lib/gcc.mak:
	MacOS X 10.4 with gcc;

	* gmake/gcc.mak: use STLport's experience for MinGW;

	* gmake/targetdirs.mak, gmake/lib/clean.mak: $(AUX_DIR) for things
	like archive repack;

2007-08-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/targetdirs.mak: default installation path is /usr/local
	now; BASE_INSTALL_*_DIR now free from TARGET_NAME prefix,
	TARGET_NAME prefix appear in INSTALL_*_DIR* as prefix for lib,
	bin, etc.;

	* gmake/linux/sys.mak: add INSTALL_D for directory creation during
	installation and INSTALL_F for installing plain file, like header;

	* gmake/unix/rules-install-so.mak: installation of headers,
	dummy yet.

2007-08-17  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/app/gcc.mak, gmake/lib/gcc.mak: use ${CXXFLAGS} when
	detect position of files and libraries; this useful for
	multilib gcc configuration, when something like -m32 select
	libraries family.

2007-08-08  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/app/rules.mak: use special link string for Digital Mars
	and Borland compilers, due to special pass of options and files
	to linker for this OE;

	* gmake/gcc.mak, gmake/dmc.mak: use STLport's experience;

	* gmake/lib/gcc.mak: gcc 3.3 also may have bad libsupc++.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/gcc.mak, gmake/top.mak: add include option for boost's
	headers, if BOOST_DIR defined.

2007-06-08  Petr Ovtchenkov  <ptr@island.corbina.net>

	* clean.mak, extern.mak, config.mak: move to gmake catalog

	* top.mak: move some files in gmake catalog; replace USE_MAKE
	by gmake;

	* gmake/app/top.mak, gmake/lib/top.mak: replace USE_MAKE by gmake.

2007-05-31  Petr Ovtchenkov  <ptr@island.corbina.net>

	* gmake/app/gcc.mak, gmake/targets.mak, gmake/windows/rules-so.mak:
	remove bogus OSNAME cygming, replace one by normal windows;

	* gmake/gcc.mak, gmake/lib/gcc.mak, gmake/sysid.mak: ditto;
