@@ -1,0 +1,4 @@
+int f()
+{
+  return 0;
+}
